--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
   <link rel="stylesheet" href="utility.css">
 </head>
 <body>
-  <div class="container flex">
-  <div class="left border">
-    <div class="home">
+  <div class="container flex bg-black">
+  <div class="left">
+    <div class="home bg-grey rounded m1 p1 ">
+      <div class="logo"><img class="invert" src="logo.svg" alt=""></div>
       <ul>
-         <li><img src="home.svg" alt="home">Home</li>
-         <li><img src="search.svg" alt="search">Search</li>
+         <li><img class="invert" src="home.svg" alt="home">Home</li>
+         <li><img class="invert" src="search.svg" alt="search">Search</li>
       </ul>
     </div>
-    <div class="library"></div>
+    <div class="library bg-grey rounded m1 p1"> hello</div>
   </div>
   <div class="right border"></div>
    </div>
