making the left section home and library

--- a/index.html
+++ b/index.html
@@ -9,17 +9,39 @@
 </head>
 <body>
   <div class="container flex bg-black">
-  <div class="left">
-    <div class="home bg-grey rounded m1 p1 ">
-      <div class="logo"><img class="invert" src="logo.svg" alt=""></div>
-      <ul>
-         <li><img class="invert" src="home.svg" alt="home">Home</li>
-         <li><img class="invert" src="search.svg" alt="search">Search</li>
-      </ul>
+    
+    <div class="left">
+      <div class="home bg-grey rounded m1 p1">
+        <div class="logo">
+          <img class="invert" src="logo.svg" alt="">
+        </div>
+        <ul>
+          <li><img class="invert" src="home.svg" alt="home">Home</li>
+          <li><img class="invert" src="search.svg" alt="search">Search</li>
+        </ul>
+      </div>
+
+      <div class="library bg-grey rounded m1 p1">
+        <div class="heading">
+          <img class="invert" src="library-svgrepo-com.svg" alt="">
+          <h2>Your Library</h2>
+        </div>
+
+        <div class="footer">
+          <div>Legal</div>
+          <div>Safety & Privacy Center</div>
+          <div>Privacy Policy</div>
+          <div>Cookies</div>
+          <div>About Ads</div>
+          <div>Accessibility</div>
+          <div>Cookies</div>
+        </div>
+      </div>
     </div>
-    <div class="library bg-grey rounded m1 p1"> hello</div>
-  </div>
-  <div class="right border"></div>
-   </div>
+
+    <div class="right border"></div>
+  
+  </div> <!-- closing .container -->
+
 </body>
 </html>
