--- a/index.html
+++ b/index.html
@@ -39,9 +39,40 @@
       </div>
     </div>
 
-    <div class="right border"></div>
+    <div class="right bg-grey rounded">
+      <div class="header">
+        <div class="nav">
+         <svg class="invert" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#000000" fill="none">
+    <path d="M15 6C15 6 9.00001 10.4189 9 12C8.99999 13.5812 15 18 15 18" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+    </svg>
+
+        <svg class="invert" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#000000" fill="none">
+    <path d="M9.00005 6C9.00005 6 15 10.4189 15 12C15 13.5812 9 18 9 18" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+     </svg>
+        </div>
+        <div class="buttons">
+          <button>Signup</button>
+          <button>Login</button>
+        </div>
+      </div>
+      <div class="beatiffyPlaylists">
+        <h1>Beatiffy Playlists</h1>
+        <div class="cardContainer">
+          <div class="card">
+            <img src="https://i.scdn.co/image/ab67616d00001e02203e6495a78184970ab274ac" alt="">
+            <h2>AZUL</h2>
+            <p>Guru Randhawa, Gurjit Gill, Lavish Dhiman</p>
+          </div>
+          <div class="card">
+            <img src="https://i.scdn.co/image/ab67616d00001e02203e6495a78184970ab274ac" alt="">
+            <h2>AZUL</h2>
+            <p>Guru Randhawa, Gurjit Gill, Lavish Dhiman</p>
+          </div>
+        </div>
+      </div>
+    </div>
   
-  </div> <!-- closing .container -->
+  </div>
 
 </body>
 </html>
