--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +8,10 @@
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="utility.css">
 </head>
+
 <body>
   <div class="container flex bg-black">
-    
+
     <div class="left">
       <div class="home bg-grey rounded m1 p1">
         <div class="logo">
@@ -42,13 +44,17 @@
     <div class="right bg-grey rounded">
       <div class="header">
         <div class="nav">
-         <svg class="invert" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#000000" fill="none">
-    <path d="M15 6C15 6 9.00001 10.4189 9 12C8.99999 13.5812 15 18 15 18" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-    </svg>
+          <svg class="invert" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"
+            color="#000000" fill="none">
+            <path d="M15 6C15 6 9.00001 10.4189 9 12C8.99999 13.5812 15 18 15 18" stroke="currentColor"
+              stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+          </svg>
 
-        <svg class="invert" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" color="#000000" fill="none">
-    <path d="M9.00005 6C9.00005 6 15 10.4189 15 12C15 13.5812 9 18 9 18" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-     </svg>
+          <svg class="invert" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"
+            color="#000000" fill="none">
+            <path d="M9.00005 6C9.00005 6 15 10.4189 15 12C15 13.5812 9 18 9 18" stroke="#141B34" stroke-width="1.5"
+              stroke-linecap="round" stroke-linejoin="round" />
+          </svg>
         </div>
         <div class="buttons">
           <button>Signup</button>
@@ -59,20 +65,46 @@
         <h1>Beatiffy Playlists</h1>
         <div class="cardContainer">
           <div class="card">
+            <div class="play">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="48" height="48">
+                <!-- Bright Green filled circle -->
+                <circle cx="12" cy="12" r="10" fill="#00FF00" />
+
+                <!-- Play button with Light Grey stroke -->
+                <path
+                  d="M15.9453 12.3948C15.7686 13.0215 14.9333 13.4644 13.2629 14.3502C11.648 15.2064 10.8406 15.6346 10.1899 15.4625C9.9209 15.3913 9.6758 15.2562 9.47812 15.0701C9 14.6198 9 13.7465 9 12C9 10.2535 9 9.38018 9.47812 8.92995C9.6758 8.74381 9.9209 8.60868 10.1899 8.53753C10.8406 8.36544 11.648 8.79357 13.2629 9.64983C14.9333 10.5356 15.7686 10.9785 15.9453 11.6052C16.0182 11.8639 16.0182 12.1361 15.9453 12.3948Z"
+                   stroke-width="1.5" stroke-linejoin="round" fill="#000" />
+              </svg>
+
+
+            </div>
             <img src="https://i.scdn.co/image/ab67616d00001e02203e6495a78184970ab274ac" alt="">
             <h2>AZUL</h2>
             <p>Guru Randhawa, Gurjit Gill, Lavish Dhiman</p>
           </div>
           <div class="card">
+            <div class="play">
+               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="48" height="48">
+                <!-- Bright Green filled circle -->
+                <circle cx="12" cy="12" r="10" fill="#00FF00" />
+
+                <!-- Play button with Light Grey stroke -->
+                <path
+                  d="M15.9453 12.3948C15.7686 13.0215 14.9333 13.4644 13.2629 14.3502C11.648 15.2064 10.8406 15.6346 10.1899 15.4625C9.9209 15.3913 9.6758 15.2562 9.47812 15.0701C9 14.6198 9 13.7465 9 12C9 10.2535 9 9.38018 9.47812 8.92995C9.6758 8.74381 9.9209 8.60868 10.1899 8.53753C10.8406 8.36544 11.648 8.79357 13.2629 9.64983C14.9333 10.5356 15.7686 10.9785 15.9453 11.6052C16.0182 11.8639 16.0182 12.1361 15.9453 12.3948Z"
+                   stroke-width="1.5" stroke-linejoin="round" fill="#000" />
+              </svg>
+              </div>
             <img src="https://i.scdn.co/image/ab67616d00001e02203e6495a78184970ab274ac" alt="">
             <h2>AZUL</h2>
             <p>Guru Randhawa, Gurjit Gill, Lavish Dhiman</p>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  
+
   </div>
 
 </body>
+
 </html>
