--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
           </svg>
         </div>
         <div class="buttons">
-          <button>Signup</button>
-          <button>Login</button>
+          <button class="signupbtn">Signup</button>
+          <button class="loginbtn">Login</button>
         </div>
       </div>
       <div class="beatiffyPlaylists">
@@ -98,13 +98,13 @@
             <h2>AZUL</h2>
             <p>Guru Randhawa, Gurjit Gill, Lavish Dhiman</p>
             </div>
-          </div>
+         </div>
         </div>
       </div>
     </div>
 
   </div>
-
+  <script src="script.js"></script>
 </body>
 
 </html>
