--- a/index.html
+++ b/index.html
@@ -85,7 +85,17 @@
          </div>
         </div>
         <div class="playbar">
-          playbar
+          <div class="songinfo">
+
+          </div>
+          <div class="songbuttons">
+           <img src="prevsong.svg" alt="">
+           <img src="play.svg" alt="">
+           <img src="nextsong.svg" alt=""> 
+          </div>
+          <div class="songtime">
+            
+          </div>
         </div>
       </div>
     </div>
