--- a/index.html
+++ b/index.html
@@ -27,7 +27,23 @@
         <div class="heading">
           <img class="invert" src="library-svgrepo-com.svg" alt="">
           <h2>Your Library</h2>
+         
         </div>
+         <div class="songList">
+            <ul>
+              <li>
+                <img class="invert" src="music.svg" alt="">
+                <div class="info">
+                  <div>song name</div>
+                  <div>song artist</div>
+                </div>
+                <div class="playnow">
+                  <span>Play Now</span>
+                  <img class="invert" src="play.svg" alt="">
+                </div>
+              </li>
+            </ul>
+          </div>
 
         <div class="footer">
           <div>Legal</div>
