making the song list section good and also choose icons and font style for project

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <div class="home bg-grey rounded m1 p1">
         <div class="logo">
           <img class="invert" src="logo.svg" alt="">
+          <p>Beatiffy</p>
         </div>
         <ul>
           <li><img class="invert" src="home.svg" alt="home">Home</li>
@@ -31,17 +32,7 @@
         </div>
          <div class="songList">
             <ul>
-              <li>
-                <img class="invert" src="music.svg" alt="">
-                <div class="info">
-                  <div>song name</div>
-                  <div>song artist</div>
-                </div>
-                <div class="playnow">
-                  <span>Play Now</span>
-                  <img class="invert" src="play.svg" alt="">
-                </div>
-              </li>
+             
             </ul>
           </div>
 
