--- a/index.html
+++ b/index.html
@@ -92,6 +92,11 @@
          </div>
         </div>
         <div class="playbar">
+          <div class="seekbar">
+            <div class="circle">
+              
+            </div>
+          </div>
           <div class="songinfo">
 
           </div>
