--- a/index.html
+++ b/index.html
@@ -94,19 +94,21 @@
         <div class="playbar">
           <div class="seekbar">
             <div class="circle">
-              
+
             </div>
           </div>
+          <div class="abovebar">
           <div class="songinfo">
 
           </div>
           <div class="songbuttons">
-           <img src="prevsong.svg" alt="">
-           <img src="play.svg" alt="">
-           <img src="nextsong.svg" alt=""> 
+           <img id="previous" src="prevsong.svg" alt="">
+           <img id="play" src="play.svg" alt="">
+           <img id="next" src="nextsong.svg" alt=""> 
           </div>
           <div class="songtime">
             
+          </div>
           </div>
         </div>
       </div>
