adding media query to the playbar and seek bar

--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
 
           </div>
           <div class="songbuttons">
-           <img id="previous" src="prevsong.svg" alt="">
-           <img id="play" src="play.svg" alt="">
-           <img id="next" src="nextsong.svg" alt=""> 
+           <img width="30px" id="previous" src="prevsong.svg" alt="">
+           <img width="30px" id="play" src="play.svg" alt="">
+           <img width="30px" id="next" src="nextsong.svg" alt=""> 
           </div>
           <div class="songtime">
             
