adding a volume button functionality.

--- a/index.html
+++ b/index.html
@@ -112,8 +112,16 @@
            <img width="30px" id="play" src="play.svg" alt="">
            <img width="30px" id="next" src="nextsong.svg" alt=""> 
           </div>
+          <div class="timevol">
           <div class="songtime">
             
+          </div>
+          <div class="volume">
+            <img width="25px" src="volume.svg" alt="" srcset="">
+            <div class="range">
+              <input type="range" name="volume">
+            </div>
+          </div>
           </div>
           </div>
         </div>
