--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
       <div class="beatiffyPlaylists">
         <h1>Beatiffy Playlists</h1>
         <div class="cardContainer">
-          <div class="card">
+
+          <div data-folder="songs/ncs" class="card">
             <div class="play">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="48" height="48">
                 <!-- Bright Green filled circle -->
@@ -92,6 +93,169 @@
 
             </div>
             <img src="https://i.scdn.co/image/ab67616d00001e02203e6495a78184970ab274ac" alt="">
+            <h2>AZUL</h2>
+            <p>Guru Randhawa, Gurjit Gill, Lavish Dhiman</p>
+          </div>
+
+          <div data-folder="songs/cs" class="card">
+            <div class="play">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="48" height="48">
+                <!-- Bright Green filled circle -->
+                <circle cx="12" cy="12" r="10" fill="#00FF00" />
+
+                <!-- Play button with Light Grey stroke -->
+                <path
+                  d="M15.9453 12.3948C15.7686 13.0215 14.9333 13.4644 13.2629 14.3502C11.648 15.2064 10.8406 15.6346 10.1899 15.4625C9.9209 15.3913 9.6758 15.2562 9.47812 15.0701C9 14.6198 9 13.7465 9 12C9 10.2535 9 9.38018 9.47812 8.92995C9.6758 8.74381 9.9209 8.60868 10.1899 8.53753C10.8406 8.36544 11.648 8.79357 13.2629 9.64983C14.9333 10.5356 15.7686 10.9785 15.9453 11.6052C16.0182 11.8639 16.0182 12.1361 15.9453 12.3948Z"
+                   stroke-width="1.5" stroke-linejoin="round" fill="#000" />
+              </svg>
+
+
+            </div>
+            <img src="cover/cover.jpg" alt="">
+            <h2>AZUL</h2>
+            <p>Guru Randhawa, Gurjit Gill, Lavish Dhiman</p>
+          </div>
+           <div data-folder="songs/ncs1" class="card">
+            <div class="play">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="48" height="48">
+                <!-- Bright Green filled circle -->
+                <circle cx="12" cy="12" r="10" fill="#00FF00" />
+
+                <!-- Play button with Light Grey stroke -->
+                <path
+                  d="M15.9453 12.3948C15.7686 13.0215 14.9333 13.4644 13.2629 14.3502C11.648 15.2064 10.8406 15.6346 10.1899 15.4625C9.9209 15.3913 9.6758 15.2562 9.47812 15.0701C9 14.6198 9 13.7465 9 12C9 10.2535 9 9.38018 9.47812 8.92995C9.6758 8.74381 9.9209 8.60868 10.1899 8.53753C10.8406 8.36544 11.648 8.79357 13.2629 9.64983C14.9333 10.5356 15.7686 10.9785 15.9453 11.6052C16.0182 11.8639 16.0182 12.1361 15.9453 12.3948Z"
+                   stroke-width="1.5" stroke-linejoin="round" fill="#000" />
+              </svg>
+
+
+            </div>
+            <img src="cover/cover (1).jpg" alt="">
+            <h2>AZUL</h2>
+            <p>Guru Randhawa, Gurjit Gill, Lavish Dhiman</p>
+          </div>
+           <div data-folder="songs/ncs2" class="card">
+            <div class="play">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="48" height="48">
+                <!-- Bright Green filled circle -->
+                <circle cx="12" cy="12" r="10" fill="#00FF00" />
+
+                <!-- Play button with Light Grey stroke -->
+                <path
+                  d="M15.9453 12.3948C15.7686 13.0215 14.9333 13.4644 13.2629 14.3502C11.648 15.2064 10.8406 15.6346 10.1899 15.4625C9.9209 15.3913 9.6758 15.2562 9.47812 15.0701C9 14.6198 9 13.7465 9 12C9 10.2535 9 9.38018 9.47812 8.92995C9.6758 8.74381 9.9209 8.60868 10.1899 8.53753C10.8406 8.36544 11.648 8.79357 13.2629 9.64983C14.9333 10.5356 15.7686 10.9785 15.9453 11.6052C16.0182 11.8639 16.0182 12.1361 15.9453 12.3948Z"
+                   stroke-width="1.5" stroke-linejoin="round" fill="#000" />
+              </svg>
+
+
+            </div>
+            <img src="cover/cover (2).jpg" alt="">
+            <h2>AZUL</h2>
+            <p>Guru Randhawa, Gurjit Gill, Lavish Dhiman</p>
+          </div>
+           <div data-folder="songs/ncs3" class="card">
+            <div class="play">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="48" height="48">
+                <!-- Bright Green filled circle -->
+                <circle cx="12" cy="12" r="10" fill="#00FF00" />
+
+                <!-- Play button with Light Grey stroke -->
+                <path
+                  d="M15.9453 12.3948C15.7686 13.0215 14.9333 13.4644 13.2629 14.3502C11.648 15.2064 10.8406 15.6346 10.1899 15.4625C9.9209 15.3913 9.6758 15.2562 9.47812 15.0701C9 14.6198 9 13.7465 9 12C9 10.2535 9 9.38018 9.47812 8.92995C9.6758 8.74381 9.9209 8.60868 10.1899 8.53753C10.8406 8.36544 11.648 8.79357 13.2629 9.64983C14.9333 10.5356 15.7686 10.9785 15.9453 11.6052C16.0182 11.8639 16.0182 12.1361 15.9453 12.3948Z"
+                   stroke-width="1.5" stroke-linejoin="round" fill="#000" />
+              </svg>
+
+
+            </div>
+            <img src="cover/cover (3).jpg" alt="">
+            <h2>AZUL</h2>
+            <p>Guru Randhawa, Gurjit Gill, Lavish Dhiman</p>
+          </div>
+           <div data-folder="songs/ncs4" class="card">
+            <div class="play">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="48" height="48">
+                <!-- Bright Green filled circle -->
+                <circle cx="12" cy="12" r="10" fill="#00FF00" />
+
+                <!-- Play button with Light Grey stroke -->
+                <path
+                  d="M15.9453 12.3948C15.7686 13.0215 14.9333 13.4644 13.2629 14.3502C11.648 15.2064 10.8406 15.6346 10.1899 15.4625C9.9209 15.3913 9.6758 15.2562 9.47812 15.0701C9 14.6198 9 13.7465 9 12C9 10.2535 9 9.38018 9.47812 8.92995C9.6758 8.74381 9.9209 8.60868 10.1899 8.53753C10.8406 8.36544 11.648 8.79357 13.2629 9.64983C14.9333 10.5356 15.7686 10.9785 15.9453 11.6052C16.0182 11.8639 16.0182 12.1361 15.9453 12.3948Z"
+                   stroke-width="1.5" stroke-linejoin="round" fill="#000" />
+              </svg>
+
+
+            </div>
+            <img src="cover/cover (4).jpg" alt="">
+            <h2>AZUL</h2>
+            <p>Guru Randhawa, Gurjit Gill, Lavish Dhiman</p>
+          </div>
+           <div data-folder="songs/ncs5" class="card">
+            <div class="play">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="48" height="48">
+                <!-- Bright Green filled circle -->
+                <circle cx="12" cy="12" r="10" fill="#00FF00" />
+
+                <!-- Play button with Light Grey stroke -->
+                <path
+                  d="M15.9453 12.3948C15.7686 13.0215 14.9333 13.4644 13.2629 14.3502C11.648 15.2064 10.8406 15.6346 10.1899 15.4625C9.9209 15.3913 9.6758 15.2562 9.47812 15.0701C9 14.6198 9 13.7465 9 12C9 10.2535 9 9.38018 9.47812 8.92995C9.6758 8.74381 9.9209 8.60868 10.1899 8.53753C10.8406 8.36544 11.648 8.79357 13.2629 9.64983C14.9333 10.5356 15.7686 10.9785 15.9453 11.6052C16.0182 11.8639 16.0182 12.1361 15.9453 12.3948Z"
+                   stroke-width="1.5" stroke-linejoin="round" fill="#000" />
+              </svg>
+
+
+            </div>
+            <img src="cover/cover (5).jpg" alt="">
+            <h2>AZUL</h2>
+            <p>Guru Randhawa, Gurjit Gill, Lavish Dhiman</p>
+          </div>
+           <div data-folder="songs/ncs6" class="card">
+            <div class="play">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="48" height="48">
+                <!-- Bright Green filled circle -->
+                <circle cx="12" cy="12" r="10" fill="#00FF00" />
+
+                <!-- Play button with Light Grey stroke -->
+                <path
+                  d="M15.9453 12.3948C15.7686 13.0215 14.9333 13.4644 13.2629 14.3502C11.648 15.2064 10.8406 15.6346 10.1899 15.4625C9.9209 15.3913 9.6758 15.2562 9.47812 15.0701C9 14.6198 9 13.7465 9 12C9 10.2535 9 9.38018 9.47812 8.92995C9.6758 8.74381 9.9209 8.60868 10.1899 8.53753C10.8406 8.36544 11.648 8.79357 13.2629 9.64983C14.9333 10.5356 15.7686 10.9785 15.9453 11.6052C16.0182 11.8639 16.0182 12.1361 15.9453 12.3948Z"
+                   stroke-width="1.5" stroke-linejoin="round" fill="#000" />
+              </svg>
+
+
+            </div>
+            <img src="cover/cover (6).jpg" alt="">
+            <h2>AZUL</h2>
+            <p>Guru Randhawa, Gurjit Gill, Lavish Dhiman</p>
+          </div>
+           <div data-folder="songs/ncs7" class="card">
+            <div class="play">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="48" height="48">
+                <!-- Bright Green filled circle -->
+                <circle cx="12" cy="12" r="10" fill="#00FF00" />
+
+                <!-- Play button with Light Grey stroke -->
+                <path
+                  d="M15.9453 12.3948C15.7686 13.0215 14.9333 13.4644 13.2629 14.3502C11.648 15.2064 10.8406 15.6346 10.1899 15.4625C9.9209 15.3913 9.6758 15.2562 9.47812 15.0701C9 14.6198 9 13.7465 9 12C9 10.2535 9 9.38018 9.47812 8.92995C9.6758 8.74381 9.9209 8.60868 10.1899 8.53753C10.8406 8.36544 11.648 8.79357 13.2629 9.64983C14.9333 10.5356 15.7686 10.9785 15.9453 11.6052C16.0182 11.8639 16.0182 12.1361 15.9453 12.3948Z"
+                   stroke-width="1.5" stroke-linejoin="round" fill="#000" />
+              </svg>
+
+
+            </div>
+            <img src="cover/cover (7).jpg" alt="">
+            <h2>AZUL</h2>
+            <p>Guru Randhawa, Gurjit Gill, Lavish Dhiman</p>
+          </div>
+           <div data-folder="songs/ncs8" class="card">
+            <div class="play">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="48" height="48">
+                <!-- Bright Green filled circle -->
+                <circle cx="12" cy="12" r="10" fill="#00FF00" />
+
+                <!-- Play button with Light Grey stroke -->
+                <path
+                  d="M15.9453 12.3948C15.7686 13.0215 14.9333 13.4644 13.2629 14.3502C11.648 15.2064 10.8406 15.6346 10.1899 15.4625C9.9209 15.3913 9.6758 15.2562 9.47812 15.0701C9 14.6198 9 13.7465 9 12C9 10.2535 9 9.38018 9.47812 8.92995C9.6758 8.74381 9.9209 8.60868 10.1899 8.53753C10.8406 8.36544 11.648 8.79357 13.2629 9.64983C14.9333 10.5356 15.7686 10.9785 15.9453 11.6052C16.0182 11.8639 16.0182 12.1361 15.9453 12.3948Z"
+                   stroke-width="1.5" stroke-linejoin="round" fill="#000" />
+              </svg>
+
+
+            </div>
+            <img src="cover/cover.jpg" alt="">
             <h2>AZUL</h2>
             <p>Guru Randhawa, Gurjit Gill, Lavish Dhiman</p>
           </div>
