adding name to playlists

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
             </div>
             <img src="https://i.scdn.co/image/ab67616d00001e02203e6495a78184970ab274ac" alt="">
-            <h2>AZUL</h2>
+            <h2>45AZUL</h2>
             <p>Guru Randhawa, Gurjit Gill, Lavish Dhiman</p>
           </div>
 
@@ -112,8 +112,8 @@
 
             </div>
             <img src="cover/cover.jpg" alt="">
-            <h2>AZUL</h2>
-            <p>Guru Randhawa, Gurjit Gill, Lavish Dhiman</p>
+            <h2>Go Funky</h2>
+            <p>Lets Go Funky</p>
           </div>
            <div data-folder="songs/ncs1" class="card">
             <div class="play">
@@ -130,8 +130,8 @@
 
             </div>
             <img src="cover/cover (1).jpg" alt="">
-            <h2>AZUL</h2>
-            <p>Guru Randhawa, Gurjit Gill, Lavish Dhiman</p>
+            <h2>Angry Mood</h2>
+            <p>Calm Your Anger</p>
           </div>
            <div data-folder="songs/ncs2" class="card">
             <div class="play">
@@ -148,8 +148,8 @@
 
             </div>
             <img src="cover/cover (2).jpg" alt="">
-            <h2>AZUL</h2>
-            <p>Guru Randhawa, Gurjit Gill, Lavish Dhiman</p>
+            <h2>Just Chill</h2>
+            <p>Yes Just Chill</p>
           </div>
            <div data-folder="songs/ncs3" class="card">
             <div class="play">
@@ -166,8 +166,8 @@
 
             </div>
             <img src="cover/cover (3).jpg" alt="">
-            <h2>AZUL</h2>
-            <p>Guru Randhawa, Gurjit Gill, Lavish Dhiman</p>
+            <h2>Bright Songs</h2>
+            <p>Bright Songs For You</p>
           </div>
            <div data-folder="songs/ncs4" class="card">
             <div class="play">
@@ -184,8 +184,8 @@
 
             </div>
             <img src="cover/cover (4).jpg" alt="">
-            <h2>AZUL</h2>
-            <p>Guru Randhawa, Gurjit Gill, Lavish Dhiman</p>
+            <h2>Diljit</h2>
+            <p>Diljit Hits</p>
           </div>
            <div data-folder="songs/ncs5" class="card">
             <div class="play">
@@ -202,8 +202,8 @@
 
             </div>
             <img src="cover/cover (5).jpg" alt="">
-            <h2>AZUL</h2>
-            <p>Guru Randhawa, Gurjit Gill, Lavish Dhiman</p>
+            <h2>I Love You</h2>
+            <p>Love In Air</p>
           </div>
            <div data-folder="songs/ncs6" class="card">
             <div class="play">
@@ -220,8 +220,8 @@
 
             </div>
             <img src="cover/cover (6).jpg" alt="">
-            <h2>AZUL</h2>
-            <p>Guru Randhawa, Gurjit Gill, Lavish Dhiman</p>
+            <h2>Get Up</h2>
+            <p>You Can Do It</p>
           </div>
            <div data-folder="songs/ncs7" class="card">
             <div class="play">
@@ -238,8 +238,8 @@
 
             </div>
             <img src="cover/cover (7).jpg" alt="">
-            <h2>AZUL</h2>
-            <p>Guru Randhawa, Gurjit Gill, Lavish Dhiman</p>
+            <h2>Karan Ajula</h2>
+            <p>Songs</p>
           </div>
            <div data-folder="songs/ncs8" class="card">
             <div class="play">
@@ -256,8 +256,8 @@
 
             </div>
             <img src="cover/cover.jpg" alt="">
-            <h2>AZUL</h2>
-            <p>Guru Randhawa, Gurjit Gill, Lavish Dhiman</p>
+            <h2>ROck</h2>
+            <p>Songs</p>
           </div>
          </div>
         </div>
