changing cover  images

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
 
             </div>
-            <img src="https://i.scdn.co/image/ab67616d00001e02203e6495a78184970ab274ac" alt="">
+            <img src="cover/cover(0).jpg" alt="">
             <h2>45AZUL</h2>
             <p>Guru Randhawa, Gurjit Gill, Lavish Dhiman</p>
           </div>
@@ -183,9 +183,9 @@
 
 
             </div>
-            <img src="cover/cover (4).jpg" alt="">
-            <h2>Diljit</h2>
-            <p>Diljit Hits</p>
+            <img src="cover/cover(4).jpg" alt="">
+            <h2>New Year</h2>
+            <p>New Year Special</p>
           </div>
            <div data-folder="songs/ncs5" class="card">
             <div class="play">
@@ -237,9 +237,9 @@
 
 
             </div>
-            <img src="cover/cover (7).jpg" alt="">
-            <h2>Karan Ajula</h2>
-            <p>Songs</p>
+            <img src="cover/cover(7).jpg" alt="">
+            <h2>Concert</h2>
+            <p>Concert Songs</p>
           </div>
            <div data-folder="songs/ncs8" class="card">
             <div class="play">
@@ -255,9 +255,9 @@
 
 
             </div>
-            <img src="cover/cover.jpg" alt="">
-            <h2>ROck</h2>
-            <p>Songs</p>
+            <img src="cover/coverlast.jpg" alt="">
+            <h2>Feel The Music</h2>
+            <p>Feel</p>
           </div>
          </div>
         </div>
