--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
   <title>Beatiffy - Web Player: Music for everyone</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="utility.css">
+
+<style>
+  body {
+    font-style: italic;
+  }
+</style>
+
+
 </head>
 
 <body>
@@ -14,7 +22,7 @@
 
     <div class="left">
       <div class="close">
-        <img width="30px" class="invert" src="close.svg" alt="">
+        <img width="30px" src="close.svg" alt="">
       </div>
       <div class="home bg-grey rounded m1 p1">
         <div class="logo">
@@ -22,14 +30,14 @@
           <p>Beatiffy</p>
         </div>
         <ul>
-          <li><img class="invert" src="home.svg" alt="home">Home</li>
-          <li><img class="invert" src="search.svg" alt="search">Search</li>
+          <li><img src="home.svg" alt="home">Home</li>
+          <li><img src="search.svg" alt="search">Search</li>
         </ul>
       </div>
 
       <div class="library bg-grey rounded m1 p1">
         <div class="heading">
-          <img class="invert" src="library-svgrepo-com.svg" alt="">
+          <img src="library-svgrepo-com.svg" alt="">
           <h2>Your Library</h2>
          
         </div>
@@ -55,14 +63,14 @@
       <div class="header">
         <div class="nav">
           <div class="hamburgerContainer">
-          <img width="40px" class="invert hamburger" src="hamburger.svg" alt="">
-          <svg class="invert" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"
+          <img width="40px" class="hamburger" src="hamburger.svg" alt="">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"
             color="#000000" fill="none">
             <path d="M15 6C15 6 9.00001 10.4189 9 12C8.99999 13.5812 15 18 15 18" stroke="currentColor"
               stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
           </svg>
 
-          <svg class="invert" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"
             color="#000000" fill="none">
             <path d="M9.00005 6C9.00005 6 15 10.4189 15 12C15 13.5812 9 18 9 18" stroke="#141B34" stroke-width="1.5"
               stroke-linecap="round" stroke-linejoin="round" />
@@ -93,8 +101,8 @@
 
             </div>
             <img src="cover/cover(0).jpg" alt="">
-            <h2>45AZUL</h2>
-            <p>Guru Randhawa, Gurjit Gill, Lavish Dhiman</p>
+            <h2>Happy Hits</h2>
+            <p>Hits For You</p>
           </div>
 
           <div data-folder="songs/cs" class="card">
