--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
 
             </div>
-            <img src="cover/cover(0).jpg" alt="">
+            <img src="cover/happyhits11.jpg" alt="">
             <h2>Happy Hits</h2>
             <p>Hits For You</p>
           </div>
